@@ -20,6 +20,7 @@ a brief description beside it.
 		self.radio_syncs['sync'] = gtk.RadioButton(None, "Normal")
 		self.radio_syncs['sync'].set_name("sync")
 		self.radio_syncs['sync'].connect("toggled", self.stage_selected, "sync")
+		self.radio_syncs['sync'].set_size_request(100, -1)
 		hbox = gtk.HBox(gtk.FALSE, 0)
 		hbox.pack_start(self.radio_syncs['sync'], expand=gtk.FALSE, fill=gtk.FALSE, padding=5)
 		hbox.pack_start(gtk.Label("This will run 'emerge sync' to get a local copy of the portage tree"), expand=gtk.FALSE, fill=gtk.FALSE, padding=20)
@@ -27,6 +28,7 @@ a brief description beside it.
 		self.radio_syncs['webrsync'] = gtk.RadioButton(self.radio_syncs['sync'], "Webrsync")
 		self.radio_syncs['webrsync'].set_name("webrsync")
 		self.radio_syncs['webrsync'].connect("toggled", self.stage_selected, "webrsync")
+		self.radio_syncs['webrsync'].set_size_request(100, -1)
 		hbox = gtk.HBox(gtk.FALSE, 0)
 		hbox.pack_start(self.radio_syncs['webrsync'], expand=gtk.FALSE, fill=gtk.FALSE, padding=5)
 		hbox.pack_start(gtk.Label("This will download a portage snapshot from a Gentoo mirror and sync it locally. Use\nthis option if you are behind a nazi-ish firewall that blocks outgoing rsync traffic"), expand=gtk.FALSE, fill=gtk.FALSE, padding=20)
@@ -34,6 +36,7 @@ a brief description beside it.
 		self.radio_syncs['custom'] = gtk.RadioButton(self.radio_syncs['sync'], "None")
 		self.radio_syncs['custom'].set_name("custom")
 		self.radio_syncs['custom'].connect("toggled", self.stage_selected, "custom")
+		self.radio_syncs['custom'].set_size_request(100, -1)
 		hbox = gtk.HBox(gtk.FALSE, 0)
 		hbox.pack_start(self.radio_syncs['custom'], expand=gtk.FALSE, fill=gtk.FALSE, padding=5)
 		hbox.pack_start(gtk.Label("Use this option to bypass syncing the tree. If you want to NFS mount the portage tree,\nuse this option"), expand=gtk.FALSE, fill=gtk.FALSE, padding=20)
@@ -57,6 +60,7 @@ a brief description beside it.
 		self.controller.SHOW_BUTTON_FORWARD = gtk.TRUE
 		self.controller.SHOW_BUTTON_FINISH  = gtk.FALSE
 		self.radio_syncs[self.controller.install_profile.get_portage_tree_sync_type()].set_active(gtk.TRUE)
+		self.active_selection = self.controller.install_profile.get_portage_tree_sync_type()
 #		self.entry_stage_tarball_uri.set_text(self.controller.install_profile.get_stage_tarball_uri())
 
 	def deactivate(self):
